--- a/src/main/resources/templates/customer/account.html
+++ b/src/main/resources/templates/customer/account.html
@@ -53,7 +53,7 @@
 
         <div class="row">
             <form th:action="@{/accounts/{accountId}/transfers/new(accountId=${account.id})}" method="GET">
-                <button type="submit" class="btn">
+                <button type="submit" class="btn btn-secondary">
                             <span class="glyphicon glyphicon-transfer" aria-hidden="true"
                                   style="max-height:100%;"></span>
                 </button>
