--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,6 +36,9 @@
             <div class="form-group col-md-4">
                 <label for="inputTaxNr">Tax Number</label>
                 <input type="text" th:field="*{taxNumber}" class="form-control" id="inputTaxNr" required>
+                <div th:if="${invalidTaxNr != null}" class="alert alert-danger notification" role="alert">
+                    <small th:text="${invalidTaxNr}"></small><small> already registered.</small>
+                </div>
             </div>
             <div class="form-group col-md-2">
                 <label for="inputBirthDate">Date of Birth</label>
@@ -46,6 +49,9 @@
             <div class="form-group col-md-3">
                 <label for="inputUsername">Username</label>
                 <input type="text" th:field="*{username}" class="form-control" id="inputUsername" required>
+                <div th:if="${invalidUsername != null}" class="alert alert-danger notification" role="alert">
+                    <small th:text="${invalidUsername}"></small><small> already in use.</small>
+                </div>
             </div>
             <div class="form-group col-md-3">
                 <label for="inputPassword">Password</label>
