worked on customer view for employees

--- a/src/main/resources/templates/customer/dashboard.html
+++ b/src/main/resources/templates/customer/dashboard.html
@@ -67,7 +67,7 @@
 
         <script>
             function rowCustomerClicked(value,column) {
-                location.href = "/customer/" + value;
+                location.href = "/customers/" + value;
             }
         </script>
     </div>
