--- a/src/main/resources/templates/customer/account.html
+++ b/src/main/resources/templates/customer/account.html
@@ -41,7 +41,8 @@
         <div class="row">
             <div class="col">
                 <h3 th:if="${account.getIban()}">Account IBAN: <span th:text="${account.getIban()}"/></h3>
-                <h3 th:if="${ #lists.isEmpty(transfers)}" style="float: left">There are no transfers for this account yet.</h3>
+                <h3 th:if="${ #lists.isEmpty(transfers)}" style="float: left">There are no transfers for this account
+                    yet.</h3>
                 <h3 style="color: forestgreen;" th:if="${info}" th:text="${info}"></h3>
                 <h3 style="color: firebrick; " th:if="${error}" th:text="${error}"></h3>
             </div>
@@ -49,49 +50,50 @@
                 <h3 th:text="${#numbers.formatDecimal(account.getBalance()/100, 1, 'DEFAULT', 2, 'DEFAULT')}">100</h3>
             </div>
         </div>
+    </div>
 
-
-        <div class="row">
+    <div class="col-md-8 mx-auto">
+        <div class="btn-toolbar">
             <form th:action="@{/accounts/{accountId}/transfers/new(accountId=${account.id})}" method="GET">
                 <button type="submit" class="btn btn-secondary">
-                            <span class="glyphicon glyphicon-transfer" aria-hidden="true"
-                                  style="max-height:100%;"></span>
+                    <i class="glyphicon glyphicon-transfer" style="margin-right: 10px"></i>Transfer
                 </button>
             </form>
         </div>
-
-        <div class="row">
-            <table class="table table-hover" style="margin-top: 50px" th:if="${not #lists.isEmpty(transfers)}">
-                <tr>
-                    <th>No</th>
-                    <th style="text-align: center;">IBAN</th>
-                    <th style="text-align: center;">Balance</th>
-                    <!--<th style="text-align: center;">Actions</th>-->
-                </tr>
-                <tr th:each="transfer, custStat : ${transfers}"
-                    style="cursor: pointer">
-                    <td th:text="${custStat.count}">1</td>
-                    <td th:text="${transfer.getId()}" style="text-align: right;">DE123456789</td>
-                    <td th:text="${#numbers.formatDecimal(transfer.amount/100, 1, 'DEFAULT', 2, 'DEFAULT')}"
-                        style="text-align: right;">1000
-                    </td>
-                    <!--
-                    <td style="text-align: right;">
-                        <div class="row align-items-center justify-content-center">
-
-                            <div th:replace="fragments/buttons :: btnAccountTransfer"/>
-                            <div style="width: 5px"></div>
-                            <div th:replace="fragments/buttons :: btnDeleteAccount"/>
-                        </div>
-                    </td>
-                    -->
-                </tr>
-            </table>
-        </div>
-
     </div>
-</div>
 
+
+    <div class="row">
+        <table class="table table-hover" style="margin-top: 50px" th:if="${not #lists.isEmpty(transfers)}">
+            <tr>
+                <th>No</th>
+                <th style="text-align: center;">IBAN</th>
+                <th style="text-align: center;">Balance</th>
+                <!--<th style="text-align: center;">Actions</th>-->
+            </tr>
+            <tr th:each="transfer, custStat : ${transfers}"
+                style="cursor: pointer">
+                <td th:text="${custStat.count}">1</td>
+                <td th:text="${transfer.getId()}" style="text-align: right;">DE123456789</td>
+                <td th:text="${#numbers.formatDecimal(transfer.amount/100, 1, 'DEFAULT', 2, 'DEFAULT')}"
+                    style="text-align: right;">1000
+                </td>
+                <!--
+                <td style="text-align: right;">
+                    <div class="row align-items-center justify-content-center">
+
+                        <div th:replace="fragments/buttons :: btnAccountTransfer"/>
+                        <div style="width: 5px"></div>
+                        <div th:replace="fragments/buttons :: btnDeleteAccount"/>
+                    </div>
+                </td>
+                -->
+            </tr>
+        </table>
+    </div>
+
+</div>
+</div>
 
 
 </body>
