--- a/src/main/resources/templates/customer/dashboard.html
+++ b/src/main/resources/templates/customer/dashboard.html
@@ -30,12 +30,12 @@
     <div class="col-md-8 mx-auto">
         <h1>Welcome to The Bank of your Trust</h1>
         <h2 th:if="${name}">Hello <span th:text="${name}"/>, have a nice day! </h2>
+        <h3 th:if="${customer && #lists.isEmpty(accounts)}">There are no accounts yet.</h3>
 
         <div style="clear: both">
-            <h3 th:if="${customer && #lists.isEmpty(accounts)}" style="float: left">There are no accounts yet.</h3>
             <h3 style="color: forestgreen; float: left" th:if="${info}" th:text="${info}"></h3>
             <h3 style="color: firebrick; float: left" th:if="${error}" th:text="${error}"></h3>
-            <h3 style="float: right" th:if="${customer}" th:text="${#numbers.formatDecimal(totalBalance/100, 1, 'DEFAULT', 2, 'DEFAULT')}"></h3>
+            <h3 style="float: right" th:if="${customer && not #lists.isEmpty(accounts)}" th:text="${#numbers.formatDecimal(totalBalance/100, 1, 'DEFAULT', 2, 'DEFAULT')}"></h3>
         </div>
     </div>
 
@@ -73,12 +73,15 @@
     </div>
 
     <div class="col-md-8 mx-auto">
-        <form th:if="${customer}" th:action="@{/accounts/opening}" method="GET">
-            <button type="submit" class="btn btn-primary" th:href="@{/accounts/opening}">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Apply for an account
-            </button>
-        </form>
+        <div class="btn-toolbar">
+            <form th:if="${customer}" th:action="@{/accounts/opening}" method="GET">
+                <button type="submit" class="btn btn-primary" th:href="@{/accounts/opening}">
+                    <i class="glyphicon glyphicon-plus" style="margin-right: 10px"></i> Apply for an account
+                </button>
+            </form>
+        </div>
     </div>
+
 </div>
 
 
