--- a/src/main/resources/templates/fragments/table.html
+++ b/src/main/resources/templates/fragments/table.html
@@ -5,7 +5,7 @@
     <table class="table table-hover" style="margin-top: 50px" th:if="${not #lists.isEmpty(accounts)}">
         <tr>
             <th>No</th>
-            <th style="text-align: center;">IBAN</th>
+            <th>IBAN</th>
             <th style="text-align: center;">Balance</th>
             <!--<th style="text-align: center;">Actions</th>-->
         </tr>
