--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,12 +7,17 @@
             <a class="navbar-brand" th:href="@{/}">The Bank of Trust</a>
         </div>
         <div class="navbar-nav my-2 my-lg-0">
-            <li><a th:href="@{/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/register}"><i class="fa fa-user-plus"></i> Register</a>
+            </li>
+        </div>
+        <div style="height:100%; width:2em; clear:both;"></div>
+        <div class="navbar-nav my-2 my-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/login}"><i class="fa fa-sign-in"></i> Login</a>
+            </li>
         </div>
         <div style="height:100%; width:1em; clear:both;"></div>
-        <div class="navbar-nav my-2 my-lg-0">
-            <li><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </div>
     </nav>
 </div>
 
@@ -22,8 +27,11 @@
             <a class="navbar-brand" th:href="@{/dashboard}">The Bank of Trust</a>
         </div>
         <div class="navbar-nav my-2 my-lg-0">
-            <li><a th:href="@{/logout}" method="post"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/logout}"><i class="fa fa-sign-out"></i> Logout</a>
+            </li>
         </div>
+        <div style="height:100%; width:1em; clear:both;"></div>
     </nav>
 </div>
 
